[gd_scene load_steps=31 format=3 uid="uid://c8lvpjoslcppl"]

[ext_resource type="Script" path="res://Enemy/enemy.gd" id="1_1eoe5"]
[ext_resource type="Texture2D" uid="uid://ddxfwyc5bl5ip" path="res://assets/crimsons/sblwalk.png" id="1_t0psc"]
[ext_resource type="Texture2D" uid="uid://bxmkj1qr0cxux" path="res://assets/crimsons/crmsnidle.png" id="2_1e2tc"]
[ext_resource type="Script" path="res://Enemy/enemy_hitbox.gd" id="3_0udjp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_srkdq"]
atlas = ExtResource("2_1e2tc")
region = Rect2(0, 0, 80, 88)

[sub_resource type="AtlasTexture" id="AtlasTexture_3h4y3"]
atlas = ExtResource("2_1e2tc")
region = Rect2(80, 0, 80, 88)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmv84"]
atlas = ExtResource("2_1e2tc")
region = Rect2(160, 0, 80, 88)

[sub_resource type="AtlasTexture" id="AtlasTexture_qrd6t"]
atlas = ExtResource("2_1e2tc")
region = Rect2(0, 88, 80, 88)

[sub_resource type="AtlasTexture" id="AtlasTexture_345hq"]
atlas = ExtResource("2_1e2tc")
region = Rect2(80, 88, 80, 88)

[sub_resource type="AtlasTexture" id="AtlasTexture_ucypt"]
atlas = ExtResource("2_1e2tc")
region = Rect2(160, 88, 80, 88)

[sub_resource type="AtlasTexture" id="AtlasTexture_2yvei"]
atlas = ExtResource("2_1e2tc")
region = Rect2(0, 176, 80, 88)

[sub_resource type="AtlasTexture" id="AtlasTexture_w63ah"]
atlas = ExtResource("2_1e2tc")
region = Rect2(80, 176, 80, 88)

[sub_resource type="AtlasTexture" id="AtlasTexture_0r1o8"]
atlas = ExtResource("1_t0psc")
region = Rect2(94, 0, 94, 99)

[sub_resource type="AtlasTexture" id="AtlasTexture_q8487"]
atlas = ExtResource("1_t0psc")
region = Rect2(188, 0, 94, 99)

[sub_resource type="AtlasTexture" id="AtlasTexture_cd5wg"]
atlas = ExtResource("1_t0psc")
region = Rect2(0, 99, 94, 99)

[sub_resource type="AtlasTexture" id="AtlasTexture_7paxd"]
atlas = ExtResource("1_t0psc")
region = Rect2(94, 99, 94, 99)

[sub_resource type="AtlasTexture" id="AtlasTexture_h82yv"]
atlas = ExtResource("1_t0psc")
region = Rect2(188, 99, 94, 99)

[sub_resource type="AtlasTexture" id="AtlasTexture_47mie"]
atlas = ExtResource("1_t0psc")
region = Rect2(0, 198, 94, 99)

[sub_resource type="AtlasTexture" id="AtlasTexture_rel6o"]
atlas = ExtResource("1_t0psc")
region = Rect2(94, 198, 94, 99)

[sub_resource type="AtlasTexture" id="AtlasTexture_bmvl5"]
atlas = ExtResource("1_t0psc")
region = Rect2(94, 0, 94, 99)

[sub_resource type="AtlasTexture" id="AtlasTexture_dvbnj"]
atlas = ExtResource("1_t0psc")
region = Rect2(188, 0, 94, 99)

[sub_resource type="AtlasTexture" id="AtlasTexture_xarwm"]
atlas = ExtResource("1_t0psc")
region = Rect2(0, 99, 94, 99)

[sub_resource type="AtlasTexture" id="AtlasTexture_qg1je"]
atlas = ExtResource("1_t0psc")
region = Rect2(94, 99, 94, 99)

[sub_resource type="AtlasTexture" id="AtlasTexture_i48go"]
atlas = ExtResource("1_t0psc")
region = Rect2(188, 99, 94, 99)

[sub_resource type="AtlasTexture" id="AtlasTexture_j1uh6"]
atlas = ExtResource("1_t0psc")
region = Rect2(0, 198, 94, 99)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3yr6"]
atlas = ExtResource("1_t0psc")
region = Rect2(94, 198, 94, 99)

[sub_resource type="SpriteFrames" id="SpriteFrames_ifdpg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_srkdq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3h4y3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmv84")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qrd6t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_345hq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ucypt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2yvei")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w63ah")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0r1o8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q8487")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cd5wg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7paxd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h82yv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_47mie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rel6o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bmvl5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dvbnj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xarwm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qg1je")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i48go")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j1uh6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3yr6")
}],
"loop": true,
"name": &"enemyWalk",
"speed": 15.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_fs635"]
radius = 139.058

[sub_resource type="CircleShape2D" id="CircleShape2D_1llxb"]
radius = 18.0

[sub_resource type="CircleShape2D" id="CircleShape2D_rpqjg"]
radius = 11.0

[node name="enemy" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_1eoe5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-3, 1)
sprite_frames = SubResource("SpriteFrames_ifdpg")
animation = &"enemyWalk"
autoplay = "Idle"

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
light_mask = 2
visibility_layer = 2
position = Vector2(5, 15)
shape = SubResource("CircleShape2D_fs635")

[node name="Enemy_Hitbox" type="Area2D" parent="."]
script = ExtResource("3_0udjp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy_Hitbox"]
light_mask = 2
visibility_layer = 2
position = Vector2(-3, 9)
shape = SubResource("CircleShape2D_1llxb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4, 15)
shape = SubResource("CircleShape2D_rpqjg")

[node name="EnemyTimerRespawn" type="Timer" parent="."]

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="area_entered" from="Enemy_Hitbox" to="." method="_on_enemy_hitbox_area_entered"]
